--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 html {
   max-width: 30rem;
   padding: 3rem 1rem;
   margin: auto;
   line-height: 1.5;
   font-size: 1.25rem;
+  background-color: #000;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  margin: 1rem 0 1rem;
+h1, h2, h3, h4, h5, h6 {
+  margin: 1rem 0;
 }
 
-p,ul,ol {
+p, ul, ol {
   margin-bottom: 1rem;
-  color: #222;
-  font-family: sans-serif;
+  color: #fff;
 }
