--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,9 @@ html {
 h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0;
   font-size: 1.25rem;
-  font-weight: 500;
 }
 
 p, ul, ol {
   margin-bottom: 1rem;
-  color: #fff;
+  color: #868686;
 }
