--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0;
   font-size: 1rem;
-  color: #f0f0f0;
+  color: #adadad;
   font-weight: normal;
 }
 
