--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ p, ul, ol {
 }
 
 .header {
-  font-size: 1.25rem;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
+  font-size: 1rem;
   color: #adadad;
 }
 
