--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ html {
   font-family: 'Inter', sans-serif;
 }
 
+h1 {
+  font-size: 1.1rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0;
   font-size: 0.9rem;
