--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,10 @@ p, ul, ol {
 .header a:hover {
   color: #fff;
 }
+
+hr {
+  border: none; /* Removes the default border */
+  height: 1px; /* Sets the height of the line */
+  background-color: #adadad; /* Sets the color of the line */
+  margin: 1rem 0; /* Adds vertical space around the line */
+}
