--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@ html {
   font-family: 'Inter', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0;
   font-size: 1rem;
